# Crazyflie_Simulation

./: Makefile  README.rst  header.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
Crazyflie_Simulation/: __init__.py
Crazyflie_Simulation/solid/: __init__.py  log.py  nodes.py  objects.py  pid.py
Crazyflie_Simulation/solid/Logging/: log.csv
Crazyflie_Simulation/solid/assets/: box.urdf  box_goal.urdf  can.urdf  can_goal.urdf  cf2x.urdf
Crazyflie_Simulation/solid/eom/: crazyflie_ode.py
Crazyflie_Simulation/solid/ode/: __init__.py  enginenodes.py
Crazyflie_Simulation/solid/pybullet/: __init__.py  enginenodes.py
Crazyflie_Simulation/solid/real/: __init__.py
docs/: Blockdiagram 2-BlockDiagram.drawio.html  Blockdiagram of white-box model.html
examples/: .~lock.log.csv#  analyse.py  analyse_validation.py  autorun_crazyflie_constant_height.py  autorun_crazyflie_constant_height_updated.py  crazyflie_constant_height.py  log.csv  position_box.py  test1.py  test2.py  trajectories.py
plotting/: hello-bulletworld.py  plot.py  replay.py
plotting/logDirectory/: log.csv
tests/: test_import.py
